# DogShelter

./: CMakeLists.txt  README.md  main.cpp
gui/: AddDogDialog.cpp  AddDogDialog.h  MainWindow.cpp  MainWindow.h  RemoveDogDialog.h  ShowByBreedDialog.h  UndoRedoDialog.h  UpdateDogDialog.h
service/: service.cpp  service.h
validator/: validator.h
